tests/rosetta/out/Elixir/15-puzzle-solver.exs
# Generated by Mochi compiler v0.10.30 on 2025-07-19T01:02:18Z
defmodule Main do
	def main do
		IO.inspect(testpkg.FifteenPuzzleExample())
	end
	end
Main.main()
